--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-loading-skeleton": "^3.3.1",
+    "react-moment": "^1.1.3",
     "react-paginate": "^8.2.0",
     "react-pro-sidebar": "^1.0.0",
     "react-redux": "^8.0.5",
